--- a/app/src/main/res/layout/drawer_tab_item.xml
+++ b/app/src/main/res/layout/drawer_tab_item.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_item_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/drawer_item_title"
+        style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="48dp"
-        android:gravity="center_vertical"
-        android:minHeight="48dp"
-        android:paddingBottom="12dp"
-        android:paddingEnd="0dp"
+        android:layout_centerVertical="true"
+        android:minHeight="24dp"
         android:paddingStart="16dp"
-        android:paddingTop="12dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="6dp"
         android:textSize="14sp"
         android:textStyle="bold"
-        style="@style/TextAppearance.AppCompat.Body1"/>
+        tools:text="Tab title" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageButton
         android:id="@+id/drawer_item_close"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="12dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_alignParentEnd="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        app:srcCompat="@drawable/ic_clear"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="6dp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_clear" />
 </RelativeLayout>
