--- a/app/src/main/res/layout/fragment_add_files.xml
+++ b/app/src/main/res/layout/fragment_add_files.xml
@@ -74,7 +74,6 @@
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
-            android:layout_marginStart="4dp"
             android:orientation="vertical"
             android:id="@+id/checkBoxContainer"
             android:layout_width="wrap_content"
@@ -83,15 +82,16 @@
             android:layout_centerVertical="true">
             <CheckBox
                 android:id="@+id/checkbox_root"
-                android:layout_width="wrap_content"
+                android:layout_width="48dp"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/root_f"
+                android:gravity="center_horizontal"
                 android:textSize="10sp"
                 android:layout_gravity="center_horizontal"
-                android:textColor="?colorAccent" />
+                android:includeFontPadding="false"/>
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
@@ -102,20 +102,21 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_target"
             android:layout_toStartOf="@+id/variants">
+
             <ru.svolf.girl.ui.GirlEditText
                 android:id="@+id/field_target"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <ImageButton
             android:id="@+id/variants"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_expand_more"
-            android:background="?selectableItemBackgroundBorderless"
-            style="@style/Base.Widget.AppCompat.Button.Small"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_expand_more" />
     </RelativeLayout>
     <include
         android:id="@+id/button_bar"
