--- a/app/src/main/res/layout/bottomsheet_back.xml
+++ b/app/src/main/res/layout/bottomsheet_back.xml
@@ -25,5 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_rule"/>
+        tools:listitem="@layout/item_rule"
+        android:paddingBottom="16dp"/>
 </LinearLayout>
