--- a/app/src/main/res/layout/drawer_tab_item.xml
+++ b/app/src/main/res/layout/drawer_tab_item.xml
@@ -31,5 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:hint="@string/rule_is_empty"
         android:layout_below="@id/drawer_item_title" />
 </RelativeLayout>
