--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -31,7 +31,7 @@
         <item name="settings_icon_color">?colorOutline</item>
         <item name="cardStyle">@style/CardViewStyle</item>
         <item name="android:windowTranslucentStatus">true</item>
-<!--        <item name="android:editTextBackground">@drawable/edit_text_background</item>-->
+        <item name="android:editTextBackground">@drawable/edit_text_background</item>
     </style>
 
     <style name="CardViewStyle" parent="Widget.Material3.CardView.Elevated">
